# LiteVNA_QT

./: .gitignore  CMakeLists.txt  README.md
CMakeTools/: CMakeLists.txt
libxavna/: CMakeLists.txt
libxavna/inc/: calibration.hpp  common.hpp  commonn.hpp  platform_abstraction.hpp  xavna.hpp  xavna_cpp.hpp  xavna_generic.hpp
libxavna/src/: calibration.cpp  platform_abstraction.cpp  platform_abstraction_windows.cpp  xavna.cpp  xavna_cpp.cpp
libxavna_mock_ui/: CMakeLists.txt
libxavna_mock_ui/inc/: xavna_mock_ui_dialog.hpp  xavna_mock_ui_global.hpp
libxavna_mock_ui/src/: xavna_mock.cpp  xavna_mock_ui.cpp  xavna_mock_ui_dialog.cpp
libxavna_mock_ui/ui/: xavna_mock_ui_dialog.ui
litevna_qt/: CMakeLists.txt
litevna_qt/inc/: calibrationfinetunedialog.hpp  calkitsettings.hpp  calkitsettingsdialog.hpp  dtfwindow.hpp  firmwareupdater.hpp  mainwindow.hpp  networkview.hpp  polarview.hpp  touchstone.hpp  utility.hpp
litevna_qt/resources/: resources.qrc  resources.rc  style.qss
litevna_qt/src/: calibrationfinetunedialog.cpp  calkitsettings.cpp  calkitsettingsdialog.cpp  configureviewdialog.cpp  dtfwindow.cpp  firmwareupdatedialog.cpp  firmwareupdater.cpp  frequencydialog.cpp  graphpanel.cpp  impedancedisplay.cpp  main.cpp  mainwindow.cpp  markerslider.cpp  networkview.cpp  polarview.cpp  touchstone.cpp
litevna_qt/ui/: graphpanel.ui  mainwindow.ui  markerslider.ui
